# DeepCurrents

./: .gitignore  Makefile  pyproject.toml
scripts/: 01-generate-data.sh  02-fit-minimal-surface.sh  02-fit-single-mesh.sh  02-train-latent.sh  03-render-current.sh  03-render-interpolation.sh  preprocess_data.py
