[tool.poetry]
name = "deepcurrents"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.21.2"
scipy = "^1.7.1"
scikit-learn = "^1.0.1"
torch = { version = "1.11.0+cu113", source = "pytorch" }
tqdm ="^4.62.3"
libigl = "^2.5.0"
tensorboard = "^2.6.0"
six = "^1.16.0"
imageio = "^2.10.1"

[[tool.poetry.dependencies.pytorch3d]]
python = "3.8"
url = "https://dl.fbaipublicfiles.com/pytorch3d/packaging/wheels/py38_cu113_pyt1110/pytorch3d-0.7.2-cp38-cp38-linux_x86_64.whl"
markers = "platform_python_implementation == 'CPython' and platform_machine == 'x86_64'"

[[tool.poetry.dependencies.pytorch3d]]
python = "3.9"
url = "https://dl.fbaipublicfiles.com/pytorch3d/packaging/wheels/py39_cu113_pyt1110/pytorch3d-0.7.2-cp39-cp39-linux_x86_64.whl"
markers = "platform_python_implementation == 'CPython' and platform_machine == 'x86_64'"

[[tool.poetry.dependencies.pytorch3d]]
python = "3.10"
url = "https://dl.fbaipublicfiles.com/pytorch3d/packaging/wheels/py310_cu113_pyt1110/pytorch3d-0.7.2-cp310-cp310-linux_x86_64.whl"
markers = "platform_python_implementation == 'CPython' and platform_machine == 'x86_64'"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu113"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
